New mod platform, leaning into Java Agent
This deprecates a lot of files. I'll remove them later.